# minibridge

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.runner.yml  docker-compose.yml  phala.toml  pyproject.toml
configs/: minibridge.demo.json  minibridge.host.local.json  minibridge.runner.phala.json
docs/: provider-registration.md  usage.md
examples/: http_demo.py  mock_run.py
scripts/: deploy-host.sh  deploy-runner.sh  phala-restore-build-context.sh  register-runner.sh
src/llm_api_proof/: __init__.py  __main__.py  attestation.py  bundle.py  cli.py  host_control.py  host_http_server.py  http_server.py  models.py  pricing.py  provider.py  reporting.py  service.py  signing.py  state.py  verifier.py
src/minibridge/: __init__.py  __main__.py  host_control.py  host_http_server.py
src/minibridge/app/: __init__.py  cli.py  reporting.py  state.py
src/minibridge/bundle/: __init__.py  service.py
src/minibridge/core/: __init__.py  attestation.py  models.py  pricing.py  signing.py  verifier.py
src/minibridge/proof/: __init__.py  service.py
src/minibridge/providers/: __init__.py  base.py
src/minibridge/transport/: __init__.py  http_server.py
tests/: test_bundle.py  test_cli.py  test_dstack_attestation.py  test_host_control.py  test_reporting.py  test_roundtrip.py
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  api.ts  styles.css  types.ts
