[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minibridge"
version = "0.1.0"
description = "TEE-ready proof receipts for LLM API calls"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
minibridge = "minibridge.app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
